# chessboard-generator

./: .gitignore  Cargo.toml  Justfile  README.md  TODO.md
.github/workflows/: build.yml
examples/: generate_all.rs
src/: chessboard_generator.rs  lib.rs
src/layers/: layer_wood.rs  mod.rs
